# Examples

./: .gitignore
.github/workflows/: README.md  monorepo-actor-dev.yaml  monorepo-actor-release.md  monorepo-actor-release.yaml  monorepo-provider-dev.yaml  monorepo-provider-release.md  monorepo-provider-release.yaml
apigw/: README.md
apigw/apigw_actors/apigw_router/: Cargo.toml  wasmcloud.toml
apigw/apigw_actors/apigw_router/src/: lib.rs
apigw/apigw_actors/apigw_router/src/methods/: mod.rs  router.rs  url.rs
apigw/jammin_interfaces_apigw/: apigw.smithy
apigw/jammin_interfaces_apigw/rust/: Cargo.toml
apigw/jammin_interfaces_apigw/rust/src/: apigw.rs
dev_deployment/: .env.example  README.md  TODO.md  docker-compose.yaml  readme.md  start.sh  todo.md
dev_deployment/caddy/: Caddyfile
dev_deployment/certs/: readme.md
dev_deployment/tracing/: grafana-datasources.yaml  tempo.yaml
dev_deployment/traefik/: config.yaml  traefik.yaml
dev_deployment/wadm/: https_config.json  wadm.yaml
oauth2/: README.md
oauth2/oauth2_actors/oauth2_pkce/: .gitignore  Cargo.toml  wasmcloud.toml
oauth2/oauth2_actors/oauth2_pkce/src/: lib.rs
oauth2/oauth2_actors/oauth2_pkce/test/: nats-linkdef.example
oauth2/oauth2_client/: .env.example  .gitignore  Cargo.toml  Dioxus.toml  README.md  package-lock.json
oauth2/oauth2_client/public/: todo.md
oauth2/oauth2_client/src/: lib.rs  main.rs
oauth2/oauth2_client/src/components/: auth.rs  footer.rs  header.rs  home.rs  mod.rs  splash.rs
oauth2/oauth2_client/src/router/: router.rs
oauth2/oauth2_client/tailwind/: README.md  tailwind.config.js
