[package]
name = "oauth2_client"
version = "0.1.0"
authors = ["stephenandary <stephen@jamminmusic.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus-web = "0.3.0"
dioxus = "0.3.1"
dioxus-router = { version = "0.3.0", features = ["web"] }
fermi = "0.3.0"
log = "0.4.6"
js-sys = "0.3.57"
web-sys = { version = "0.3.60", features = [
    "Location",
    'Window',
    "HtmlDocument",
    "Response",
] }
reqwest = "0.11.14"
getrandom = { version = "0.2.8", features = ["js"] }
url = { version = "2.2.2", features = ["serde"] }
serde = "1.0.137"
serde_json = "1.0.81"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.30"
anyhow = "1.0"
# lazy_static = "1.4.0"
# parking_lot = "0.12"
# gloo = "0.8.0"

# WebAssembly Debug
wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.7"

# CSS
tailwindcss-to-rust = "0.3.2"
tailwindcss-to-rust-macros = "0.1.3"
