[package]
name = "apigw_router"
version = "0.1.0"
authors = ["stephenandary <stephen@jamminmusic.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "apigw_router"

[dependencies]
futures = "0.3"
wasmbus-rpc = "0.11"
wasmcloud-interface-httpserver = "0.9.0"
wasmcloud-interface-logging = "0.8.1"
jammin_interfaces_apigw = { version = "0.0.2", registry = "jamminmusic-crates" }
serde = "1.0.152"
serde_urlencoded = "0.7.1"
url = "2.3.1"
strum = { version = "0.24.1", features = ["derive"] }

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
